--- a/testmono/.circleci/config.yml
+++ b/testmono/.circleci/config.yml
@@ -32,14 +32,25 @@ jobs:
           command: bundle exec fastlane $FASTLANE_LANE
       - store_artifacts:
           path: output
+  testflight:
+    macos:
+      xcode: 14.3.1
+    environment:
+      FL_OUTPUT_DIR: output
+      FASTLANE_LANE: testflight
+    steps:
+      - checkout
+      - run: bundle install
+      - run:
+          name: Fastlane
+          command: bundle exec fastlane $FASTLANE_LANE
+      - store_artifacts:
+          path: output
 
 workflows:
-  build-test-adhoc:
+  build-testflight:
     jobs:
-      - build-and-test
-      - adhoc:
+      - testflight:
           filters:
             branches:
-              only: development
-          requires:
-            - build-and-test
+              only: master
