--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,10 +9,10 @@ jobs:
       FASTLANE_LANE: testflight
     steps:
       - checkout
-      - run: bundle install
+      - run: cd testmono; bundle install
       - run:
           name: Fastlane
-          command: bundle exec fastlane $FASTLANE_LANE
+          command: cd testmono; bundle exec fastlane $FASTLANE_LANE
       - store_artifacts:
           path: output
 
