--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 # .circleci/config.yml
 version: 2.1
 jobs:
-  testflight:
+  make-testflight-build:
     macos:
       xcode: 14.3.1
     environment:
@@ -19,7 +19,7 @@ jobs:
 workflows:
   build-testflight:
     jobs:
-      - testflight:
+      - make-testflight-build:
           filters:
             branches:
               only: master
